ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/LoanCalculatorConfiguration__c.object-meta.xml
<CustomObject>
    <label>Loan Calculator Configuration</label>
    <nameField>
        <displayFormat>LCC-{00000000}</displayFormat>
        <label>Loan Calculator Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Calculator Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>