ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Advertising_for_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Advertising_for_Tenants__c</fullName>
    <label>Advertising for Tenants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>