ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission__c</fullName>
    <label>Agent Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>