ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Body_Corporate_Fees_and_Charges__c.field-meta.xml
<CustomField>
    <fullName>Body_Corporate_Fees_and_Charges__c</fullName>
    <label>Body Corporate Fees and Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>