ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Break_Fees__c.field-meta.xml
<CustomField>
    <fullName>Break_Fees__c</fullName>
    <label>Break Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>