ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Building_and_Pest_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Building_and_Pest_Inspection__c</fullName>
    <label>Building and Pest Inspection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>