ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Building_and_Public_Liability_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Building_and_Public_Liability_Insurance__c</fullName>
    <label>Building and Public Liability Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>