ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Conveyancer_Solicitor_Fees__c.field-meta.xml
<CustomField>
    <fullName>Conveyancer_Solicitor_Fees__c</fullName>
    <label>Conveyancer / Solicitor Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>