ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/defaultCleaningCosts__c.field-meta.xml
<CustomField>
    <fullName>defaultCleaningCosts__c</fullName>
    <label>Default Cleaning Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>