ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/defaultLegalFees__c.field-meta.xml
<CustomField>
    <fullName>defaultLegalFees__c</fullName>
    <label>Default Legal Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>