ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/defaultLoanTerm__c.field-meta.xml
<CustomField>
    <fullName>defaultLoanTerm__c</fullName>
    <label>Default Loan Term</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>