ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/defaultMovingCosts__c.field-meta.xml
<CustomField>
    <fullName>defaultMovingCosts__c</fullName>
    <label>Default Moving Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>