ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/defaultOtherCosts__c.field-meta.xml
<CustomField>
    <fullName>defaultOtherCosts__c</fullName>
    <label>Default Other Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>