ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/defaultRenovationCosts__c.field-meta.xml
<CustomField>
    <fullName>defaultRenovationCosts__c</fullName>
    <label>Default Renovation Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>