ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Discharge_Fees__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Fees__c</fullName>
    <label>Discharge Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>