ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Early_Termination_Fees__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Fees__c</fullName>
    <label>Early Termination Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>