ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Exit_Cleaning_Costs__c.field-meta.xml
<CustomField>
    <fullName>Exit_Cleaning_Costs__c</fullName>
    <label>Exit Cleaning Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>