ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Final_Bills_Rates_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Final_Bills_Rates_Taxes__c</fullName>
    <label>Final Bills, Rates &amp; Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>