ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Gardening_and_Lawn_Mowing__c.field-meta.xml
<CustomField>
    <fullName>Gardening_and_Lawn_Mowing__c</fullName>
    <label>Gardening and Lawn Mowing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>