ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Land_Tax__c.field-meta.xml
<CustomField>
    <fullName>Land_Tax__c</fullName>
    <label>Land Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>