ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Landlords_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Landlords_Insurance__c</fullName>
    <label>Landlords Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>