ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Lender_Fees_and_Charges__c.field-meta.xml
<CustomField>
    <fullName>Lender_Fees_and_Charges__c</fullName>
    <label>Lender Fees and Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>