ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Lender_Protection_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lender_Protection_Fee__c</fullName>
    <label>Lender Protection Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>