ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/lenderName__c.field-meta.xml
<CustomField>
    <fullName>lenderName__c</fullName>
    <label>Lender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>