ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Lenders_Mortgage_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Lenders_Mortgage_Insurance__c</fullName>
    <label>Lenders Mortgage Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>