ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/LMI_Premium__c.field-meta.xml
<CustomField>
    <fullName>LMI_Premium__c</fullName>
    <label>LMI Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>