ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Loan_Calculator_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Calculator_Type__c</fullName>
    <label>Loan Calculator Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>