ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Marketing_Advertising_Costs__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Advertising_Costs__c</fullName>
    <label>Marketing / Advertising Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>