ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/maxLVRwithoutLMI__c.field-meta.xml
<CustomField>
    <fullName>maxLVRwithoutLMI__c</fullName>
    <label>Max LVR without LMI</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>