ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Mortgage_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Registration_Fee__c</fullName>
    <label>Mortgage Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>