ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Pest_Control__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control__c</fullName>
    <label>Pest Control</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>