ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Pool_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Pool_Maintenance__c</fullName>
    <label>Pool Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>