ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/PreSales_RepairsRenovations__c.field-meta.xml
<CustomField>
    <fullName>PreSales_RepairsRenovations__c</fullName>
    <label>Pre-Sales Repairs/Renovations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>