ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/processorName__c.field-meta.xml
<CustomField>
    <fullName>processorName__c</fullName>
    <label>Processor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>