ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Property_Management_Fees__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Fees__c</fullName>
    <label>Property Management Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>