ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Property_Valuation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation_Fee__c</fullName>
    <label>Property Valuation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>