ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Repairs_and_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Repairs_and_Maintenance__c</fullName>
    <label>Repairs and Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>