ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Settlement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Fee__c</fullName>
    <label>Settlement Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>