ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Staging_Costs__c.field-meta.xml
<CustomField>
    <fullName>Staging_Costs__c</fullName>
    <label>Staging Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>