ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Title_Transfer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Title_Transfer_Fee__c</fullName>
    <label>Title Transfer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>