ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Versioning__c.field-meta.xml
<CustomField>
    <fullName>Versioning__c</fullName>
    <label>Versioning</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>