ctm-sf-homeloan-app/main/default/objects/LoanCalculatorConfiguration__c/fields/Water_Charges__c.field-meta.xml
<CustomField>
    <fullName>Water_Charges__c</fullName>
    <label>Water Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>